[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/card-game-background.png" type="Texture" id=2]
[ext_resource path="res://Assets/DotGothic16-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/exit-button-normal.png" type="Texture" id=4]
[ext_resource path="res://Assets/exit-button-pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/easybutton-colored.png" type="Texture" id=6]
[ext_resource path="res://Assets/mediumbutton-colored.png" type="Texture" id=7]
[ext_resource path="res://Assets/hardbutton-colored.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Card-game-background" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 2 )

[node name="MainSlider" type="HSlider" parent="."]
margin_left = 141.0
margin_top = 38.0
margin_right = 500.0
margin_bottom = 54.0
min_value = -40.0
max_value = 0.0

[node name="MusicSlider" type="HSlider" parent="."]
anchor_right = 0.025
anchor_bottom = 0.044
margin_left = 143.0
margin_top = 105.0
margin_right = 484.0
margin_bottom = 105.16
min_value = -40.0
max_value = 0.0

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 478.0
margin_top = 295.0
margin_right = 596.0
margin_bottom = 343.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Music" type="Label" parent="."]
margin_left = 56.0
margin_top = 92.0
margin_right = 136.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
text = "Music"

[node name="Difficulty" type="Label" parent="."]
margin_left = 244.0
margin_top = 142.0
margin_right = 364.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty"

[node name="Main" type="Label" parent="."]
margin_left = 58.0
margin_top = 24.0
margin_right = 138.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Main"

[node name="EasyButton" type="TextureButton" parent="."]
margin_left = 70.0
margin_top = 205.0
margin_right = 187.0
margin_bottom = 252.0
texture_normal = ExtResource( 6 )

[node name="MediumButton" type="TextureButton" parent="."]
margin_left = 246.0
margin_top = 203.0
margin_right = 363.0
margin_bottom = 250.0
texture_normal = ExtResource( 7 )

[node name="HardButton" type="TextureButton" parent="."]
margin_left = 415.0
margin_top = 203.0
margin_right = 532.0
margin_bottom = 250.0
texture_normal = ExtResource( 8 )

[connection signal="value_changed" from="MainSlider" to="." method="_on_MainSlider_value_changed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="MediumButton" to="." method="_on_MediumButton_pressed"]
[connection signal="pressed" from="HardButton" to="." method="_on_HardButton_pressed"]
